updated homepage path

--- a/calcourse/package.json
+++ b/calcourse/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://CalCourse-Dev.github.io//CalCourse_Dev",
+  "homepage": "https://calcourse-dev.github.io/CalCourse_Dev",
   "name": "calcourse",
   "version": "0.1.0",
   "private": true,
