--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.23.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.0.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
