--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.0.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.9.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
