--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,5 @@
 {
   "name": "web",
-  "homepage": "https://calcourse-dev.github.io/CalCourse_FrontEnd/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,17 +10,14 @@
     "@types/node": "^16.11.68",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "antd": "^4.23.6",
-    "i18next": "^22.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^12.0.0",
+    "react-router-dom": "^6.4.2",
+    "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,8 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-scripts": "^5.0.1"
   }
 }
