--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,6 @@
 {
   "name": "web",
+  "homepage": "https://calcourse-dev.github.io/CalCourse_FrontEnd/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,6 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
