--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,8 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "i18next": "^22.0.2",
+    "i18next-browser-languagedetector": "^6.1.8",
+    "i18next-http-backend": "^1.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.0.0",
