--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web",
-  "homepage": "https://calcourse-dev.github.io/",
+  "homepage": "https://calcourse-dev.github.io/CalCourse_FrontEnd/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
