--- a/web/package.json
+++ b/web/package.json
@@ -14,8 +14,10 @@
     "i18next": "^22.0.2",
     "i18next-browser-languagedetector": "^6.1.8",
     "i18next-http-backend": "^1.4.4",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.1",
     "react-i18next": "^12.0.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
@@ -48,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.188",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1"
