--- a/web/package.json
+++ b/web/package.json
@@ -9,10 +9,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.68",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "antd": "^4.23.6",
+    "antd": "^4.24.2",
     "date-fns": "^2.29.3",
     "i18next": "^22.0.2",
     "i18next-browser-languagedetector": "^6.1.8",
@@ -52,6 +51,9 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^7.0.0",
+    "@craco/types": "^7.0.0",
+    "@types/node": "^18.11.9",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "prettier": "2.7.1",
