--- a/web/package.json
+++ b/web/package.json
@@ -4,22 +4,24 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@headlessui/react": "^1.7.3",
+    "@heroicons/react": "^2.0.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.68",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "antd": "^4.24.1",
+    "antd": "^4.24.2",
     "date-fns": "^2.29.3",
     "i18next": "^22.0.2",
     "i18next-browser-languagedetector": "^6.1.8",
     "i18next-http-backend": "^1.4.4",
     "lodash": "^4.17.21",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.39.1",
+    "react-hook-form": "^7.39.4",
     "react-i18next": "^12.0.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
@@ -52,9 +54,12 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.188",
+    "@craco/craco": "^7.0.0",
+    "@craco/types": "^7.0.0",
+    "@types/node": "^18.11.9",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
+    "prettier": "2.7.1",
     "tailwindcss": "^3.2.1"
   }
 }
