--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.26",
     "antd": "^4.24.2",
     "date-fns": "^2.29.3",
     "i18next": "^22.0.2",
@@ -26,6 +27,7 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
