--- a/web/.prettierrc.json
+++ b/web/.prettierrc.json
@@ -1,5 +1,6 @@
 {
-  "arrowParens": "avoid",
-  "semi": false,
-  "tabWidth": 4
+    "arrowParens": "avoid",
+    "semi": false,
+    "tabWidth": 4,
+    "singleQuote": true
 }
