--- a/web/package.json
+++ b/web/package.json
@@ -57,9 +57,11 @@
     "@craco/craco": "^7.0.0",
     "@craco/types": "^7.0.0",
     "@types/node": "^18.11.9",
+    "@types/styled-components": "^5.1.26",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "prettier": "2.7.1",
+    "styled-components": "^5.3.10",
     "tailwindcss": "^3.2.1"
   }
 }
